# p-senshi

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
program/: Cargo.toml
program/src/: error.rs  lib.rs
program/src/instruction/: claim_reward.rs  enter_season.rs  initialize_config.rs  initialize_season.rs  lock_season.rs  mod.rs  settle_season.rs  submit_scores.rs
program/src/instructions/: claim_reward.rs  enter_pool.rs  enter_season.rs  initialize_config.rs  initialize_pool.rs  initialize_season.rs  lock_pool.rs  lock_season.rs  mod.rs  settle_pool.rs  settle_season.rs  submit_scores.rs
program/src/state/: entry.rs  mod.rs  season.rs
program/src/states/: config.rs  mod.rs  pool.rs
