[workspace]
members = ["program"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.0.0", features = ["syscalls", "curve25519"] }
thiserror = "2.0.12"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
