[package]
name = "senshi-program"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "senshi_program"

[dependencies]
pinocchio.workspace = true
pinocchio-associated-token-account.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
solana-address.workspace = true
thiserror.workspace = true

[lints]
workspace = true
